@@ -10,6 +10,10 @@ function DocumentXmlReader(options) {
     function convertXmlToDocument(element) {
         var body = element.first("w:body");
 
+        if (body == null) {
+            throw new Error("Could not find the body element: are you sure this is a docx file?");
+        }
+
         var result = bodyReader.readXmlElements(body.children)
             .map(function(children) {
                 return new documents.Document(children, {
